syntax = "proto3";

package peers_touch.model.auth.v1;

import "google/protobuf/timestamp.proto";
import "domain/actor/actor.proto";

option go_package = "github.com/peers-labs/peers-touch/station/frame/touch/model;model";

message LoginRequest {
  string email = 1;
  string password = 2;
}

message AuthTokens {
  string token = 1;
  string access_token = 2;
  string refresh_token = 3;
  string token_type = 4;
  google.protobuf.Timestamp expires_at = 5;
}

message LoginData {
  AuthTokens tokens = 1;
  string session_id = 2;
  peers_touch.model.actor.v1.Actor user = 3;
}
